Added Sid and Shania's Contribution

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="container" style="margin-top: 1%">
         <p>Welcome to the QHacks x QWEB Hacktoberfest event.</p>
         <p>Your contributions will appear below.</p>
+        <p> This is Siddharth and Shania's contribution.</p>
     </div>
     <div class="container">
         <!-- add your content here -->
