--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <div class="container">
         <!-- add your content here -->
         <h1>Josh</h1>
+        <h1>Aryan</h1>
     </div>
 </body>
 
