--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- add your content here -->
         <h1> Matthew Sun: "I will not disturb the tourists, affirm with me!"</h1>
         <h1>Josh</h1>
-        <hi>Simon</hi>
+        <h1>Simon</h1>
         <h1>Dima</h1>
     </div>
 </body>
