added michael is here

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,6 +33,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>QHacks x QWEB Hacktoberfest</h1>
@@ -41,7 +43,8 @@
         <p>Your contributions will appear below.</p>
     </div>
     <div class="container">
-        <!-- add your content here -->
+        <h1>Michael is here</h1>
     </div>
 </body>
+
 </html>
