Added text and image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <p>Your contributions will appear below.</p>
     </div>
     <div class="container">
-        <!-- add your content here -->
+        <p>WE LOVE JOSH <3</p>
+        <img src=https://i.pinimg.com/564x/d1/3e/8f/d13e8fba7da41444f565fe78a9d869de.jpg alt="Blue face emoji holding a heart">
     </div>
 </body>
 </html>
