--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     <div class="container">
         <!-- add your content here -->
         <h1>Josh</h1>
+        <ul>
+            <li>Liam</li>
+            <li>Anthony</li>
+            <li>Badam</li>
+        </ul>
     </div>
 </body>
 
