--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: hotpink;
+            background-color: #f3f3f3;
             margin: 0;
             padding: 0;
         }
@@ -45,11 +45,11 @@
     </div>
     <div class="container">
         <!-- add your content here -->
-        <img src="https://pbs.twimg.com/media/DoxxUmbU8AARhn7.jpg" alt="">
         <h1> Matthew Sun: "I will not disturb the tourists, affirm with me!"</h1>
         <h1>Josh</h1>
         <hi>Simon</hi>
         <h1>Dima</h1>
+        <h1 py30>CHARLIE GUARASCI</h1>
     </div>
 </body>
 
