--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
         <!-- add your content here -->
         <h1>Josh</h1>
-        <hi>Simon</hi>
+        <h1>Simon</h1>
         <h1>Dima</h1>
     </div>
 </body>
