--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
         <p> This is Siddharth and Shania's contribution.</p>
     </div>
     <div class="container">
-        <p>WE LOVE JOSH <3</p>
-        <img src=https://i.pinimg.com/564x/d1/3e/8f/d13e8fba7da41444f565fe78a9d869de.jpg alt="Blue face emoji holding a heart">
         <h1>Michael is here</h1>
     </div>
 </body>
@@ -56,9 +54,8 @@
         <h1>Josh</h1>
         <hi>Simon</hi>
         <h1>Dima</h1>
-        <img src="assets/aaron.jpg" width="200px"/>
         <h1 py30>CHARLIE GUARASCI</h1>
-        <h1 py30>ANTHONY GRECU (BETTER THAN^)</h1>
+        <hl py30>COLIN COLIn</hl>
     </div>
 </body>
 
