--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <h1>Josh</h1>
         <hi>Simon</hi>
         <h1>Dima</h1>
+        <img src="IMG_3366.jpg" width="200px"/>
     </div>
 </body>
 
