--- a/index.html
+++ b/index.html
@@ -52,12 +52,15 @@
         <!-- add your content here -->
         <h1> Matthew Sun: "I will not disturb the tourists, affirm with me!"</h1>
         <h1>Josh</h1>
-        <h1>Aryan C</h1>
         <hi>Simon</hi>
         <h1>Dima</h1>
         <img src="IMG_3366.jpg" width="200px"/>
         <h1 py30>CHARLIE GUARASCI</h1>
         <hl py30>COLIN COLIn</hl>
+        <ul>
+            <li>ADAMADADMADMADMADMADM</li>
+           
+        </ul>
     </div>
 </body>
 
