added myself to page

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         <h1> Matthew Sun: "I will not disturb the tourists, affirm with me!"</h1>
         <h1>Josh</h1>
         <hi>Simon</hi>
-        <h1>Dima</h1>
-        <h1 py30>CHARLIE GUARASCI</h1>
+	<h1>Dima</h1>
+	<h1>Darien is the coolest</h1>
+	<h1 py30>CHARLIE GUARASCI</h1>
     </div>
 </body>
 
