--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <p> This is Siddharth and Shania's contribution.</p>
     </div>
     <div class="container">
+        <p>WE LOVE JOSH <3</p>
+        <img src=https://i.pinimg.com/564x/d1/3e/8f/d13e8fba7da41444f565fe78a9d869de.jpg alt="Blue face emoji holding a heart">
         <h1>Michael is here</h1>
     </div>
 </body>
@@ -52,13 +54,12 @@
         <!-- add your content here -->
         <h1> Matthew Sun: "I will not disturb the tourists, affirm with me!"</h1>
         <h1>Josh</h1>
-        <h1>Aryan C</h1>
         <hi>Simon</hi>
         <h1>Dima</h1>
-        <h1>Ronald</h1>
-        <img src="IMG_3366.jpg" width="200px"/>
+            <img>https://cdn.nba.com/headshots/nba/latest/1040x760/2544.png</img>
         <h1 py30>CHARLIE GUARASCI</h1>
-        <hl py30>COLIN COLIn</hl>
+        
+     
     </div>
 </body>
 
