--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <h1>Josh</h1>
         <hi>Simon</hi>
         <h1>Dima</h1>
+        <h1 style="color: purple">Loagan</h1>
         <h1 py30>CHARLIE GUARASCI</h1>
         <hl py30>COLIN COLIn</hl>
     </div>
