--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <img src=https://cdn.nba.com/headshots/nba/latest/1040x760/2544.png>
         <h1>NICKLEBACK!!!!!!!!!<h1>
         <h1 py30>CHARLIE GUARASCI</h1>
-        
+        <img src=https://media1.giphy.com/media/BK1EfIsdkKZMY/giphy.gif?cid=6c09b9525kfry0hedjpcgx4yv8zpdqxnv0wbdwi8wjr5rldm&ep=v1_gifs_search&rid=giphy.gif>
      
         <img src="IMG_3366.jpg" width="200px"/>
         <h1 py30>CHARLIE GUARASCI</h1>
