--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p> This is Siddharth and Shania's contribution.</p>
     </div>
     <div class="container">
-        <h1>Michael is here</h1>
+        <h1>Michael is here <br> LEAVE</h1>
     </div>
 </body>
 
